--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -115,6 +115,7 @@ section {
   display: block;
 }
 body {
+  color: #333;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
