--- a/src/core/components/Avatar/Avatar.module.css
+++ b/src/core/components/Avatar/Avatar.module.css
@@ -1,10 +1,12 @@
 .avatar {
   width: 32px;
   height: 32px;
-  border-radius: 50%;
 }
 
 .avatar img {
   max-width: 100%;
+  height: 100%;
   object-fit: cover;
+
+  border-radius: 50%;
 }
