--- a/src/core/components/Sidebar/Sidebar.module.css
+++ b/src/core/components/Sidebar/Sidebar.module.css
@@ -1,18 +1,53 @@
 .sidebar {
   width: 200px;
   height: 100vh;
-  padding: 0 20px;
+  padding-top: 30px;
+  padding-right: 20px;
+  padding-left: 20px;
 
   background-color: #fdfdfd;
   border-right: 1px solid #eee;
 }
 
+
+.logoWrapper {
+  font-size: 24px;
+  font-weight: 700;
+  letter-spacing: 1px;
+
+  transition: opacity 0.3s linear;
+}
+
+.logoWrapper:hover {
+  opacity: 0.6;
+}
+
+.logoWrapper a,
+.logoWrapper a:visited {
+  color: #333;
+}
+
 .navigation {
   display: flex;
   flex-direction: column;
-  margin-top: 100px;
+  margin-top: 60px;
 }
 
-.navigation a {
+.navigationLink {
+  display: flex;
+  align-items: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin-bottom: 20px;
+
+  color: #a4aab5;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+.navigationLink svg {
+  margin-right: 8px;
+
+  fill: #a4aab5;
 }
