--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -115,7 +115,7 @@ section {
   display: block;
 }
 body {
-  color: #333;
+  color: var(--black-color);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
