--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -116,7 +116,7 @@ section {
 }
 body {
   color: var(--black-color);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: "Roboto",-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   line-height: 1;
