--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -116,7 +116,7 @@ section {
 }
 body {
   color: var(--black-color);
-  font-family: "Roboto",-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: "Lato",-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   line-height: 1;
@@ -154,4 +154,10 @@ table {
 
 a {
   text-decoration: none;
+}
+
+button,
+input,
+textarea {
+  font: inherit;
 }
