--- a/src/core/components/Textarea/Textarea.module.css
+++ b/src/core/components/Textarea/Textarea.module.css
@@ -10,7 +10,7 @@
   font-weight: 500;
 }
 
-.inputWrapper {
+.textareaWrapper {
   position: relative;
 }
 
@@ -25,30 +25,32 @@
   fill: var(--gray-color)
 }
 
-.input {
+.textarea {
   width: 100%;
+  height: 100px;
   padding: 10px 16px;
 
   font-size: 16px;
 
   border: 1px solid var(--gray-color); 
   border-radius: 4px;
+  resize: none;
 
   transition-property: border-color;
   transition-timing-function: ease;
   transition-duration: 0.3s;
 }
 
-.input::placeholder {
+.textarea::placeholder {
   color: var(--gray-color);
 }
 
-.input:focus {
+.textarea:focus {
   outline: 0;
 
   border-color: var(--primary-color)
 }
 
-.input.extended {
+.textarea.extended {
   padding-left: 30px;
 }
